# pgen

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: wordhist.hpp
